made user details in security context also have userid, finished article service authorization